src/main/java/com/example/reactivewebservice/error/custom/UserAlreadyExistException.java
package com.example.reactivewebservice.error.custom;

public class UserAlreadyExistException extends RuntimeException {
}
